--- a/package.json
+++ b/package.json
@@ -1,17 +1,69 @@
 {
-  "name": "aeproject-project",
-  "version": "1.0.0",
-  "description": "This is the default package.json generated for your project",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha ./test/**/*.js --timeout 0 --exit",
-    "aetest": "aeproject test"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@aeternity/aepp-sdk": "6.0.0",
-    "aeproject-lib": "2.0.1",
-    "yarn": "1.21.0"
-  }
+    "name": "aepp-sophia-blockchain",
+    "version": "0.1.0",
+    "scripts": {
+        "build": "webpack --config ./webpack.prod.js --progress",
+        "dev": "webpack-dev-server --config ./webpack.dev.js --verbose --progress",
+        "build:stats": "webpack --config ./webpack.prod.js  --profile --json > stats.json"
+    },
+    "license": "ISC",
+    "dependencies": {
+        "@aeternity/aepp-components": "git+https://github.com/aeternity/aepp-components.git#develop",
+        "@aeternity/aepp-sdk": "^6.1.2",
+        "aeproject-lib": "2.0.1",
+        "yarn": "1.21.0",
+        "axios": "^0.19.0",
+        "bignumber.js": "^9.0.0",
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.3"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.7.4",
+        "@babel/core": "^7.7.4",
+        "@babel/node": "^7.7.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+        "@babel/plugin-transform-block-scoping": "^7.7.4",
+        "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+        "@babel/plugin-transform-runtime": "^7.7.4",
+        "@babel/preset-env": "^7.7.4",
+        "@babel/register": "^7.7.4",
+        "@babel/runtime": "^7.7.4",
+        "@fullhuman/postcss-purgecss": "^1.3.0",
+        "autoprefixer": "^9.7.2",
+        "babel-loader": "^8.0.6",
+        "browserslist": "^4.7.3",
+        "clean-webpack-plugin": "^3.0.0",
+        "core-js": "^3.4.5",
+        "css-loader": "^3.0.0",
+        "cssnano": "^4.1.10",
+        "favicons-webpack-plugin": "^1.0.2",
+        "file-loader": "^5.0.2",
+        "glob-all": "^3.1.0",
+        "html-webpack-harddisk-plugin": "^1.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.0",
+        "postcss-import": "^12.0.1",
+        "postcss-loader": "^3.0.0",
+        "precss": "^4.0.0",
+        "purgecss-webpack-plugin": "^1.6.0",
+        "raw-loader": "^4.0.0",
+        "sass-loader": "^8.0.0",
+        "tailwindcss": "^1.1.4",
+        "vue-loader": "^15.7.2",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.6.10",
+        "webpack": "^4.41.2",
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.9.0",
+        "webpack-merge": "^4.2.2",
+        "webpack-serve": "^3.2.0"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8",
+        "maintained node versions",
+        "not dead"
+    ]
 }
