sophia-blockchain d1840e848f9c500187fcab3bdf6c9a4254848b70 deployment to gh-pages

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Example Aepp",
-  "short_name": "Example Aepp",
-  "description": "Example Description.",
+  "name": "Stupidchain",
+  "short_name": "Stupidchain",
+  "description": "Stupidchain.",
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
